style.css
body {
  display: grid;
  grid-template-columns: 30vw auto;
  margin: 0;
  font-family: Tahoma, sans-serif;
  background-color: rgba(237,232,234,.05);
}

.nav {
  background: #ad1457;
  display: flex;
  width: 30vw;
  flex-direction: column;
  height: 100vh;
  align-items: center;
  position: fixed;
}

p {
  line-height: 1.4rem;
}

.about > p {
  padding-left: 20px;
}

.nav h1 {
  color: white
}
.profile {
  margin-bottom: 30px;
}

.links {
  display: flex;
  flex-direction: column;
  text-align: right;
  font-size: 1.5rem;
}

.links > a {
  text-decoration: none;
  color: rgba(149, 117, 205, .7)
}

.links > a:hover {
  color: white;
}

.links > a:visited {
  color: white;
}

.about > a:visited {
  color: blue;
}

.skill {
  padding: 2px;
  width: fit-content;
  padding-left: 10px;
}

.skill-category {
  display: flex;
  flex-direction: column;
  padding-left: 20px;
  line-height: 1.4rem;
}

.content {
  padding: 20px;
  grid-column-start: 2;
  padding-left: 30px;
}

.contact-links {
  display: flex;
  flex-direction: column;
  padding-left: 20px;
  line-height: 1.4rem;
}

.project {
  padding-left: 20px;
  padding-bottom: 20px;
}

.project > a {
  text-decoration: none;
  color: black;
}

.project > a:hover {
  color: #ad1457;
}

.tech {
    background-color: #ad1457;
    padding: 5px;
    color: white;
    margin: 3px;
    padding-left: 10px;
    padding-right: 10px;
}

@media (max-width: 800px) {
  body {
    grid-template-columns: 1fr;
    grid-template-rows: 15vh auto;
  }
  .nav {
    flex-direction: row;
    height: 15vh;
    min-width: 100vw;
    align-items: center;
    padding: 10px;
    justify-content: space-around;
  }
  .links {
    flex-direction: row;
    width: 60%;
    justify-content: space-around;
    align-items:center;
  }
  .content {
    grid-row-start: 2;
  }
  .profile {
    margin-bottom: 0px;
    width: 50px;
    height: 50px;
    padding-left: 10px;
  }
  .nav-header {
    display: flex;
    flex-direction: row;
    align-items: center;
  }
  #about:before {
    content: "";
    display: block;
    height: 15vh;
    margin: -15vh 0 0;
  }
  #projects:before {
    content: "";
    display: block;
    height: 15vh;
    margin: -15vh 0 0;
  }
  #skills:before {
    content: "";
    display: block;
    height: 15vh;
    margin: -15vh 0 0;
  }
  #contact:before {
    content: "";
    display: block;
    height: 15vh;
    margin: -15vh 0 0;
  }
}

@media (max-width: 670px) {
  .links {
    flex-direction: column;
    font-size: .9rem;
    align-items:center;
    width: auto;
    height: 15vh;
  }
  .nav {
    display: flex;
    justify-content: space-around;
    padding: 10px;
  }
}

